--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,1 +1,14 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>{{ page.title | default: site.title }}</title>
+    <link rel="stylesheet" href="/fox10301/css/style.css">
+  </head>
+  <body>
+    <div class="container">
+      {{ content }}
+    </div>
+  </body>
+</html>
 
