--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>{{ page.title | default: site.title }}</title>
-    <link rel="stylesheet" href="/fox10301/css/style.css">
-  </head>
-  <body>
-    <div class="container">
-      {{ content }}
-    </div>
-  </body>
+<html lang="ru">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>{{ page.title | default: site.title }}</title>
+  <link rel="stylesheet" href="{{ site.baseurl }}/css/style.css">
+</head>
+<body>
+  <div class="container">
+    {{ content }}
+  </div>
+</body>
 </html>
-
