--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url('images/background.jpg');
+  background-image: url('https://raw.githubusercontent.com/person10301/fox10301/refs/heads/main/images/background.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
