--- a/css/style.css
+++ b/css/style.css
@@ -9,9 +9,9 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   color: white;
   font-family: Arial, sans-serif;
+  margin-top: 20px;
 }
 
 .content {
