--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,8 @@ body {
   text-align: center;
   max-width: 80%;
   margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 h1, p {
