--- a/css/style.css
+++ b/css/style.css
@@ -65,3 +65,19 @@ h1, p {
   color: #00CC66; /* Тёмнее при наведении */
   text-decoration: none;
 }
+
+.ecology-message {
+  background: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(10px);
+  padding: 10px 20px;
+  border-radius: 10px;
+  text-align: center;
+  max-width: 80%;
+  margin-top: 20px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.ecology-message p {
+  margin: 0;
+}
